# ze2

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.keys.md  README.md  README.original.md
.github/workflows/: ci.yml  pages.yml
.pipelines/: release.yml
assets/: com.microsoft.ze2.desktop  install.sh  snapcraft.yaml
assets/manpage/: ze2.1
crates/: README.md
crates/edit/src/: tui.rs  vt.rs  word_count.rs
crates/edit/src/buffer/: mod.rs
crates/stdext/src/sys/: mod.rs  wasm.rs
crates/ze2/: Cargo.toml
crates/ze2-web/: Cargo.toml  build.rs
crates/ze2-web/src/: commands.rs  lib.rs
crates/ze2/benches/: lib.rs
crates/ze2/src/: base64.rs  cell.rs  clipboard.rs  document.rs  framebuffer.rs  fuzzy.rs  hash.rs  helpers.rs  icu.rs  input.rs  json.rs  lib.rs  oklab.rs  path.rs  tui.rs  word_count.rs
crates/ze2/src/buffer/: gap_buffer.rs  mod.rs  navigation.rs
crates/ze2/src/lsh/: cache.rs  definitions.rs  highlighter.rs  mod.rs
crates/ze2/src/simd/: lines_bwd.rs  lines_fwd.rs  memchr2.rs  mod.rs
crates/ze2/src/sys/: mod.rs  unix.rs  wasm.rs  windows.rs
crates/ze2/src/unicode/: measurement.rs  mod.rs  tables.rs
docs/: mark-semantics.md  web-ze2-plan.md
i18n/: edit.toml  ze2.toml
web/ze2/: README.md  index.html  main.js  server.mjs  ze2_web.wasm
