[package]
name = "ze2-web"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
build = "build.rs"

[lib]
crate-type = ["cdylib"]

[dependencies]
stdext.workspace = true
ze2.workspace = true

[build-dependencies]
toml-span = { version = "0.7", default-features = false }
